--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/Shwetang550/google-keep-clone",
   "name": "keep-app",
   "version": "0.1.0",
   "private": true,
